# DC_motor_telemetry

./: .gitignore  CMakeLists.txt  sdkconfig.default  sdkconfig.defaults
.github/ISSUE_TEMPLATE/: feature_request.md
libs/DC_model/: CMakeLists.txt
libs/apply_task/: CMakeLists.txt  apply_task.hpp
libs/buckboost/: CMakeLists.txt  buckboost.cpp  buckboost.hpp
libs/consoleAdvanced/: CMakeLists.txt  README.md  cmd_nvs.h  cmd_system_common.c  cmd_wifi.h  console_advanced.cpp  console_advanced.hpp  console_settings.c  console_settings.h
libs/controller/: CMakeLists.txt  controller.cpp  controller.hpp  controller_types.hpp  winddown.cpp  winddown.hpp  windup.cpp  windup.hpp
libs/controller/controllers/: fixed_sp_controller.hpp  ideal_control_law.cpp  ideal_control_law.hpp  open_loop_controller.cpp  open_loop_controller.hpp  pid_controller.cpp  pid_controller.hpp
libs/controller/winddowns/: BezierWinddown.cpp  BezierWinddown.hpp  LinearWinddown.cpp  LinearWinddown.hpp  NoWinddown.cpp  NoWinddown.hpp  bezierWinddown.cpp  bezierWinddown.hpp
libs/controller/windups/: BezierWindup.cpp  LinearWindup.cpp  LinearWindup.hpp  NoWindup.cpp  NoWindup.hpp  bezierWindup.cpp  bezierWindup.hpp
libs/controller_task/: CMakeLists.txt
libs/encoder/: CMakeLists.txt  encoder.cpp  encoder.hpp
libs/encoder_task/: CMakeLists.txt
libs/globals/: CMakeLists.txt  globals.hpp
libs/libtask/: CMakeLists.txt  tasks.hpp  tasks.t.hpp
libs/mock_dc_motor/: mock_dc_motor.hpp
libs/monitor_input/: CMakeLists.txt  monitor_input.hpp
main/: CMakeLists.txt  idf_component.yml  main.cpp
(+27 files in other folders)
